--- a/index.html
+++ b/index.html
@@ -1,36 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title></title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Blanks</title>
 
-    <link href="assets/layout.css" rel="stylesheet">
-    <script src="assets/data.js" type="text/javascript"></script>
-    <script src="assets/scripts.js" type="text/javascript"></script>
-    <script src="cordova.js" type="text/javascript"></script>  
-    <script src="js/admob.js" type="text/javascript"></script>
-</head>
+    <!--<link href="src/css/main.css" rel="stylesheet" />-->
+  </head>
 
-<body>
-
-<div class="wrapper">
-    <div class="header"><div class="nav"></div><div class="logo-wrapper"><img src="assets/img/blanks-logo.png" class="logo"></div><div><!-- empty --></div></div>
-    <div class="overlay"></div><div class="popup"></div>
-    <div class="content">
-
-
-        <div class="menu"></div>
-
-        <div class="form">
-            <form action=""></form>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="logo-wrapper">
+          <img src="src/img/blanks-logo.png" class="logo" />
         </div>
-
-        <div class="result"></div>
-
-        <div class="error"></div>
+      </header>
+      <main id="app"></main>
+      <footer><div class="error"></div></footer>
     </div>
-</div>
 
-</body>
-
+    <script src="src/js/require.js"></script>
+    <script src="index.js" type="module"></script>
+    <script src="cordova.js" type="text/javascript"></script>
+    <script src="js/admob.js" type="text/javascript"></script>
+  </body>
 </html>
