--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Blanks</title>
 
-    <!--<link href="src/css/main.css" rel="stylesheet" />-->
+    <link href="src/css/main.css" rel="stylesheet" />
   </head>
 
   <body>
     <div class="wrapper">
       <header class="header">
+        <button class="header__control"></button>
         <div class="logo-wrapper">
           <img src="src/img/blanks-logo.png" class="logo" />
         </div>
