Restructured project and added linter

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Blanks</title>
 
-    <link href="src/css/main.css" rel="stylesheet" />
+    <link href="www/css/main.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -13,16 +13,14 @@
       <header class="header">
         <button class="header__control"></button>
         <div class="logo-wrapper">
-          <img src="src/img/blanks-logo.png" class="logo" />
+          <img src="www/img/blanks-logo.png" class="logo" />
         </div>
       </header>
       <main id="app"></main>
       <footer><div class="error"></div></footer>
     </div>
 
-    <script src="src/js/require.js"></script>
-    <script src="index.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="cordova.js" type="text/javascript"></script>
-    <script src="js/admob.js" type="text/javascript"></script>
   </body>
 </html>
